--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         }
         .about-section {
             height: 100vh; /* Full screen */
-            background: url('../imageRepository/image1.jpg') no-repeat center center fixed;
+            background: url('imageRepository/image1.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
