--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -6,7 +6,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: url('image1.jpg') no-repeat center center fixed;
+            background: url('imageRepository/image1.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
         }
