--- a/home.html
+++ b/home.html
@@ -83,5 +83,6 @@
         <a href="#" title="Twitter">★</a>
         <a href="#" title="Instagram">★</a>
     </div>
+    <script src="travel_recommendation.js"></script>
 </body>
 </html>
